Closed Bug 1723282 Opened 4 years ago Closed 4 years ago

[Fission BFCache] After Browser back/forward navigation, browser would not remember the page scroll position.

Categories

(Core :: DOM: Navigation, defect, P2)

Firefox 91
Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
93 Branch
Fission Milestone MVP
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- disabled
firefox90 --- unaffected
firefox91 --- disabled
firefox92 --- wontfix
firefox93 --- fixed

People

(Reporter: alice0775, Assigned: smaug)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: nightly-community, regression, Whiteboard: fission-soft-blocker)

Attachments

(1 file)

After Browser back/forward navigation, browser would not remember the page scroll position.
It happens very often. Once the problem occurs, it will persist on that page.

This seems to happen on the specific page.

Steps to Reproduce:

  1. Open https://www.wikipedia.org/
  2. Open https://bookvilogger.com/rupin-zenigata in the same tab.
  3. Scroll and wait for page elements to load, if any.
  4. Browser back navigation and then Browser forward navigation.
    --- Observe the scroll position
  5. Repeat step 3 and step 4.

Actual Results:
Browser would not remember the page scroll position.

Expected Results:
Browser should remember/restore the page scroll position.

Regression window:
https://treeherder.mozilla.org/jobs?repo=autoland&searchStr=windows%2C2012%2Cx64%2Copt&tochange=7d32671931b7&fromchange=ab936b7f0c9f9e0b27e42e3f7909131bface08b9

Has Regression Range: --- → yes
Has STR: --- → yes
Summary: After Browser back/forward navigation, browser forgets the page scroll position. → After Browser back/forward navigation, browser would not remember the page scroll position.
Blocks: 167150
No longer blocks: fission
Summary: After Browser back/forward navigation, browser would not remember the page scroll position. → [Fission BFCache] After Browser back/forward navigation, browser would not remember the page scroll position.
Blocks: fission-bfcache
No longer blocks: 167150
Assignee: nobody → bugs
Fission Milestone: --- → M8

Moving to Fission MVP because this bug doesn't affect all sites and only happens when the site is in bfcache.

Severity: -- → S3
Fission Milestone: M8 → MVP
Priority: -- → P2
Whiteboard: fission-soft-blocker

The fix let's ContentParent::RecvSynchronizeLayoutHistoryState update the layout history state.

Using an existing test to launch a subtest for this. Hopefully the description of the test helps with reviewing it.
(These BroadcastChannel based tests can be hard to follow.)

Attachment #9235841 - Attachment description: Bug 1723282, let nonbfcacheable page update layout history state when the new page is coming from the bfcache, r=peterv → WIP: Bug 1723282, let nonbfcacheable page update layout history state when the new page is coming from the bfcache, r=peterv
Attachment #9235841 - Attachment description: WIP: Bug 1723282, let nonbfcacheable page update layout history state when the new page is coming from the bfcache, r=peterv → Bug 1723282, let nonbfcacheable page update layout history state when the new page is coming from the bfcache, r=peterv
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b33033929463 let nonbfcacheable page update layout history state when the new page is coming from the bfcache, r=peterv
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: